Addign soem functionality for widget.

--- a/core/templates/widget.html
+++ b/core/templates/widget.html
@@ -201,9 +201,9 @@ LazyLoad.css(["/site_media/css/overlayA.css", "/site_media/css/cross-site-badge.
 			      "/site_media/javascript/jquery.cookie.js",
 			      "/site_media/javascript/jquery.showLoading.js",
 			      "/site_media/javascript/ZeroClipboard.js",
-			      "http://connect.facebook.net/en_US/all.js"
+			      "/site_media/javascript/embed-js.js",
+			      "http://connect.facebook.net/en_DUS/all.js"
 			      ], function () {
-				 alert("all done and ready");
 			     });
 		 
 	     });
