--- a/core/templates/test4.html
+++ b/core/templates/test4.html
@@ -1,10 +1,10 @@
 
 <html> 
 <head> 
-  <title>Test3</title> 
+  <title>Test4</title> 
 </head> 
 <body>  
 <div id="ripple-embed"></div>
-<script type="text/javascript" src="http://www.ripplefunction.com/site_media/javascript/embed-iframe.js" ></script> 
+<script type="text/javascript" src="/site_media/javascript/embed-iframe.js" ></script> 
 </body> 
 </html>
