--- a/static/css/cross-site-badge.css
+++ b/static/css/cross-site-badge.css
@@ -1,3 +1,8 @@
+.ripple-badge-overlay {
+        width: 469px;
+	height: 220px;
+        margin: 0px;
+}
 .hiding {
     display: none;
     cursor: default;
