Adding more stuff to widget.

--- a/core/templates/test4.html
+++ b/core/templates/test4.html
@@ -5,6 +5,6 @@
 </head> 
 <body>  
 <div id="ripple-embed"></div>
-<script type="text/javascript" src="/site_media/javascript/embed-iframe.js" ></script> 
+<script type="text/javascript" src="http://www.ripplefunction.com/site_media/javascript/embed-iframe.js" ></script> 
 </body> 
 </html>
