Adding some more stuff to widget.

--- a/core/templates/widget.html
+++ b/core/templates/widget.html
@@ -10,7 +10,7 @@
 		  <div id="fb-root"></div>
            
                     {% if fbuser %}
-                    <div id="div-facebook-logged-in" class="hiding"
+                    <div id="div-facebook-logged-in" class="showing"
                     {% else  %}
                     <div id="div-facebook-logged-in" class="hiding">
                     {% endif %}
