--- a/core/templates/test4.html
+++ b/core/templates/test4.html
@@ -4,7 +4,7 @@
   <title>Test4</title> 
 </head> 
 <body>  
-<div id="ripple-embed"></div>
+<div id="ripple-embed">CAMPIAGN_ID</div>
 <script type="text/javascript" src="http://www.ripplefunction.com/site_media/javascript/embed-iframe.js" ></script> 
 </body> 
 </html>
