--- a/core/templates/campaign_admin.html
+++ b/core/templates/campaign_admin.html
@@ -28,7 +28,7 @@ Analytics: &nbsp;&nbsp;&nbsp;&nbsp;<a target="analytics" href="{{analytics_url}}
 Edit: &nbsp;&nbsp;&nbsp;&nbsp;<a target="edit" href="{{update_url}}">{{update_url}}</a><br/>
 </li>
 <li>
-Embeddable Widget : &nbsp;&nbsp;&nbsp;&nbsp;<a target="launch" href="{{launch_url}}">{{launch_url}}</a><br/>
+Embeddable Widget : &nbsp;&nbsp;&nbsp;&nbsp;<a target="launch" href="{{widget_url}}">{{widget_url}}</a><br/>
 </li>
 </ul>
 </div>
